Updated About Page

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-1<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -69,7 +69,7 @@
 
 
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" style = "background-color: black;">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" style = "background-color: #white;">
 
 	<div class="navbar navbar-inverse navbar-static-top" role="navigation">
 	        <div class="container-fluid">
@@ -108,8 +108,16 @@
 
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
-            <span class="flex-item ">
+             <span class="flex-item">
+                <i class="fa fa-users fa-2x">
+                <a class="page-scroll" href="#whatisVR"style = "font-size: 90%;color:white;"> What is VR?
+                    </i>
 
+                </a>
+
+            </span>
+
+            <span class="flex-item ">
 
                 <i class="fa fa-key fa-2x" style="vertical-align: middle;">
                      <a class="page-scroll" href="#Mission" style = "font-size: 90%; color:white; ">Mission</a>
@@ -121,7 +129,7 @@
 
             <span class="flex-item">
                 <i class="fa fa-users fa-2x">
-                <a class="page-scroll" href="#honeycombs"style = "font-size: 90%;color:white; "> Meet the Team
+                <a class="page-scroll" href="#honeycombs"style = "font-size: 90%;color:white;"> Meet the Team
                     </i>
 
                 </a>
@@ -149,8 +157,59 @@
 
 
 
+    <div class="banner">
+        <div class="banner-box">
+            <center><h1 style = "color:white;font-family:helvetica; position:relative; top: 7em;">
+              About Us
+            </h1></center>
+            <center><p style = "position:relative; top: 15em; color:white; font-size: 125%;">What is Virtual Reality? Who is the VR Club @ UCSD? Here's where you'll find out!</p></center>
+        </div>
+    </div>
 
-    <div class="mission-div" style = "background-color: black; ">
+
+    <div class="mission-div" style = "background-color: white; ">
+    <div id="whatisVR">
+        <div class="inner-wrapper">
+            <center><h1>What is VR?</h1></center><br>
+            <div class="flex">
+               <!-- <div class="flex-column">
+                    
+                    <div class="mission-photo">
+                        <img src="img/Mission Photo.jpg" style="width:72%; height:auto;">
+
+                    </div> 
+                </div> 
+                <div class="flex-column" style="position:relative; top:-36.5em;"> -->
+                <div class="flex-column">
+
+
+                    <div class="mission-paragraph" style = "color:black; text-align: center;" >
+                        <!--style="position:relative; margin-right:3.5em; text-align:justify">-->
+                        <span>VR, or virtual reality is a technology that was introduced back in the 1950s but has not advanced in the way that it was in the 21st century. virtual reality is an immersive computer-simiulated reality where users where headsets in order to be transported to alternate realities. Originally Virtual Reality was thought to be mainly for entertainment but as of recent there have been advances in fields including medicine and education, showing how versatile it is.</span><br><br><br>
+
+                    </div>
+
+                        <center>
+                       <div class = "vrGear">
+                              <img src="img/gearVR.png" height= "200" width= "200">
+                    </div>
+                </center>
+
+
+
+                    <div class="mission-paragraph" style = "color:black; text-align: center;" >
+                        <!--style="position:relative; margin-right:3.5em; text-align:justify">-->
+
+
+                        <span>VR can be experienced in three main ways. The first is through a VR headset. This is considered the best way to experience virtual reality but are also the most expensive, ranging from $99-$800. Some require a smartphone while others rely on a computer or game console. Some notable headsets include the Ocuclus Rift, Samsun Gear VR, HTC Vive, and Playstation VR. The second way is through a Cardboard VR Viewer. These were introduced by Google an offer a somewhat immersive experience for the cost of $15-$130. All you need besides the viewer is a compatible smartphone. The last option is to simply to use your mobile phone or a compatible web player. This is the least immersive but it offers users to still take advantage of the 360 degree view. </span><br><br><br>
+
+                    </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="mission-div" style = "background-color: #f2f2f2; ">
     <div id="Mission">
         <div class="inner-wrapper">
             <center><h1>Mission</h1></center><br>
@@ -165,11 +224,11 @@
                 <div class="flex-column" style="position:relative; top:-36.5em;"> -->
                 <div class="flex-column">
 
-                     <div class="mission-statement" style = "color: white;">
-                        <span><i><b>We aim to create a multidisciplinary student community with a shared interest in virtual reality or augmented reality.</b></i></span><br><br><br>
+                     <div class="mission-statement" style = "color: black; text-align:center;">
+                        <span><i>We aim to create a multidisciplinary student community with a shared interest in virtual reality or augmented reality.</i></span><br><br><br>
                     </div>
 
-                    <div class="mission-paragraph" style = "color:white; text-align: center;" >
+                    <div class="mission-paragraph" style = "color:black; text-align: center;" >
                         <!--style="position:relative; margin-right:3.5em; text-align:justify">-->
                         <span>At UCSD's Virtual Reality Club, our goal is to provide workshops to give members the skills that the virtual reality industry looks for to further pursue a career in the field. As well as work on a vast array of projects between different disciplines and work with clubs across campus. Since our founding in September 2015, we have reached over 200 students across a range of majors and had companies such as Qualcomm, OSSIC VR, and NanoVR come speak to our students. We look forward to growing the community and supporting the students who are passionate for the future of virtual and augmented reality.</span><br><br><br>
 
@@ -177,12 +236,22 @@
 
             </div>
         </div>
+    </div>
 
         <!-- <div style="position:relative; top:-68em;"><h1 id="honeycombs"> -->
 
-        <div><h1 id="honeycombs">
+        <div class = "honeycomb body" style = "background-color:white; text-align:center;">
+        <h1 id="honeycombs">
             <center>Meet The Team</h1></center><br>
-            <div class="honeycombs" >
+
+
+
+         <div class="mission-paragraph" style = "color:black; text-align: center;" >
+                        <!--style="position:relative; margin-right:3.5em; text-align:justify">-->
+                        <span>At UCSD's Virtual Reality Club, our goal is to provide workshops to give members the skills that the virtual reality industry looks for to further pursue a career in the field. As well as work on a vast array of projects between different disciplines and work with clubs across campus. Since our founding in September 2015, we have reached over 200 students across a range of majors and had companies such as Qualcomm, OSSIC VR, and NanoVR come speak to our students. We look forward to growing the community and supporting the students who are passionate for the future of virtual and augmented reality.</span><br><br><br>
+
+                    </div>
+            <div class="honeycombs">
                 <div class="comb"> <img src="img/Anish.jpg" />
                     <span>
                         <b>Anish Kannan</b><br>
@@ -256,7 +325,7 @@
 
             </div>
         </div>
-
+</div>
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
             <script src="js/jquery.homeycombs.js"></script>
             <script type="text/javascript">
@@ -303,20 +372,12 @@
     <style type="text/css">
 
         *{
-            font-family: 'Open Sans', sans-serif;
+            /*font-family: 'Open Sans', sans-serif;*/
+            /*font-family: 'Abel', sans-serif !important;*/
         }
 
-         .navbar .navbar-nav {
-                display: inline-block;
-                float: none;
-                vertical-align: top;
-            }
-            .navbar .navbar-collapse{
-                text-align: center;
-            }
-
         .mission-div{
-            background-color: #ffffff;
+            background-color: #f2f2f2;
 
         }
 
@@ -343,6 +404,7 @@
             text-align:justify;
 
         }
+
 
         .honeycombs .inner_span{
             background-color: rgba(93,93,93,0.6) !important;
@@ -397,16 +459,22 @@
         }
 
         .banner{
-            background-color: #393E46;
-            height: 60vh;
-
+            /*margin-top: -4em;*/
+            display: table;
+            width: 100%;
+            background-image: url('img/VRclubGroup.jpg');
+            background-size: cover;
+            height: 35em;
+            margin: 0;
+            background-repeat: no-repeat;
         }
 
         h1{
            /* font-family: OstrichSans-Black;*/
 
-            font-family: 'Open Sans', sans-serif !important;
-            text-decoration: underline;
+           /* font-family: 'Open Sans', sans-serif !important;*/
+
+           font-family: 'Abel', sans-serif;
     
             color: #007BD2;
         }
@@ -495,6 +563,22 @@
             background-color: #333;
             color: white;
         }
+          .navbar .navbar-nav {
+                display: inline-block;
+                float: none;
+                vertical-align: top;
+            }
+            .navbar .navbar-collapse{
+                text-align: center;
+            }
+
+            .vrGear {
+
+                margin-left: 10px;
+                clear:both;
+            }
+
+
 
 
     </style>
@@ -511,6 +595,7 @@
         </div>
 
     </footer> -->
+
     <script src="js/jquery.easing.min.js"></script>
 
     <script src="js/scrolling-nav.js"></script>
