--- a/contact.html
+++ b/contact.html
@@ -230,7 +230,7 @@
 		</div>
 
 					<div class = "button" style = "position:relative; margin:auto;
-					padding-bottom:10%;">
+					padding-bottom:10%; top:-8em;">
 						<a href = "https://docs.google.com/forms/d/1gUgqPcn_z0wt1cft38riUapG6BLm3gAMoFqQ-M9NCLg/viewform"
 						target="_blank"
 						style = "position:relative;	text-align:center;
@@ -245,9 +245,9 @@
 	</div>
 
 	<div style="position:relative; background:linear-gradient(black,#02010F,black);
-	height:200px;	top:-10%;" id = "contact"></div>
+	height:120px; top:-30em;" id = "contact"></div>
 
-		<div style = "position:relative; top:-7%; width:80%; margin:auto;
+		<div style = "position:relative; top:-25em; width:80%; margin:auto;
 		height:auto; background-color:transparent;	border-radius:15%; opacity: 0.85;
 		filter:alpha(opacity=85);">
 			<h1 style = "position:relative; color:#d3d3d3; padding-top:-35%;
@@ -275,16 +275,6 @@
 	</div>
 
 	 <style type="text/css">
-
-         .navbar .navbar-nav {
-                display: inline-block;
-                float: none;
-                vertical-align: top;
-            }
-            .navbar .navbar-collapse{
-                text-align: center;
-            }
-
         .flex-row{
             width: 100%;
             display: -webkit-box !important;
