Finished Media Page, Just need to clean up now.

--- a/about.html
+++ b/about.html
@@ -472,7 +472,7 @@
 
            /* font-family: 'Open Sans', sans-serif !important;*/
 
-           font-family: 'Abel', sans-serif;
+          /* font-family: 'Abel', sans-serif;*/
     
             color: #007BD2;
         }
