--- a/index.html
+++ b/index.html
@@ -233,50 +233,27 @@
         </a>
     </div>
 
-
-       <!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-
-
-  <div class="carousel-inner">
-    <div class="item active">
- <img src="img/arArt.jpg" alt="First slide">
-      <div class="carousel-caption">
-          <h3>ARt Gallery (Vuforia)
-Interested in the process of AR app dev for mobile? Interested in helping design, propose and implement an experimental art gallery on campus? Interested in how cyborgs interpret/interact with art?</h3>
-      </div>
-    </div>
-    <div class="item">
-      <img src="http://placehold.it/1920x1080" alt="..." height = "100%" width = "100%">
-      <div class="carousel-caption">
-          <h3>Caption Text</h3>
-      </div>
-    </div>
-    <div class="item">
-      <img src="http://placehold.it/1920x1080" alt="..." width = "100%">
-      <div class="carousel-caption">
-          <h3>Caption Text</h3>
-      </div>
-    </div>
-  </div>
-
-
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
+     <!-- FOOTER -->
+        <footer>
+            <p class="pull-right" >
+                <a style="color:white; font-size: 150%;" href="#">Back to top</a>
+            </p>
+            <!--<p class ="pull-left">
+                <a style= "color:white"> &copy; 2016 VROOM VROOM. &middot; <a href="#">Privacy</a> </p>
+            <p>-->
+                <center>
+                <div class="footer-social-icons">
+                                <ul class="social-icons">
+                                    <li><a href="" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
+                                </ul>
+                            </div>
+                            </center>
+                                     </p>
+        </footer>
 
     </div>
-    </div>
--->
 
 
 
@@ -289,6 +266,14 @@ Interested in the process of AR app dev for mobile? Interested in helping design
 
 
     <style type="text/css">
+
+     footer{
+            background-color: #337AB7;
+            height: 5em;
+            color: white;
+            width: 100%;
+        }
+
         .flex-row{
             width: 100%;
             display: -webkit-box !important;
@@ -432,26 +417,97 @@ Interested in the process of AR app dev for mobile? Interested in helping design
                 text-align: center;
             }
         
+      @import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
-/*
-    .fp-controlArrow.fp-prev {
-    left: 0;
-    border: none;
-    width: 150px;
-    height: 150px;
-    background: url('img/icons/chevron-left.png') no-repeat;
-    cursor: pointer;
-    }
-    .fp-controlArrow.fp-next {
-    right: 0;
-    border: none;
-    width: 50px;
-    height: 101px;
-    background: url('img/icons/chevron-right.png') no-repeat;
-    cursor: pointer;
-    }
 
-*/
+
+
+
+
+p > a:hover{
+    color: #d9d9d9;
+    text-decoration:  underline;
+}
+
+
+}
+
+ul {
+    padding:0;
+    list-style: none;
+}
+
+
+.footer-social-icons {
+    width: 350px;
+    display:block;
+  margin: 0 auto;
+}
+
+.social-icon {
+    color: #fff;
+}
+
+ul.social-icons {   
+    margin-top: 10px;
+
+}
+
+.social-icons li {
+    vertical-align: top;
+    display: inline;
+    align-content: center;
+}
+
+.social-icons a {
+    color: #fff; 
+    text-decoration: none;
+}
+
+
+.fa-facebook {
+    padding:20px 28px 14px 28px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+
+.fa-facebook:hover {
+    background-color: #3d5b99;
+}
+
+.fa-twitter {
+    padding:20px 20px 14px 20px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+
+.fa-twitter:hover {
+    background-color: #00aced;
+}
+
+
+.fa-youtube {
+    padding:20px 24px 14px 22px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+
+.fa-youtube:hover {
+    background-color: #e64a41;
+}
 
 
 
