Pretty much done.

--- a/index.html
+++ b/index.html
@@ -174,18 +174,11 @@
                 <div class="item bg bg1">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1>Example headline.</h1>
+                            <h1>Another Day</h1>
                             <p>
-                                Note: If you're viewing this page via a
-                                <code>file://</code>
-                                URL, the "next" and "previous" Glyphicon buttons on the left and
-                                right might not load/display properly due to web browser
-                                security rules.
+                                Another day is a unique virtual reality experience in which the user is exposed to what it's like to be diagnosed with depression. This was created by Connor Smith. 
                             </p>
-                            <p>
-                                <a class="btn btn-lg btn-primary" href="#" role="button">Sign
-                                    up today</a>
-                            </p>
+                           
                         </div>
                     </div>
                 </div>
@@ -194,13 +187,9 @@
                 <div class="item bg bg2">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1>Another example headline.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget
-                                quam. Donec id elit non mi porta gravida at eget metus. Nullam
-                                id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <h1>Lucid VR</h1>
+                            <p>Lucid VR is a meditative virtual reality experience that combines white noise with relaxed scenes in order to calm the user.</p>
                             <p>
-                                <a class="btn btn-lg btn-primary" href="#" role="button">Learn
-                                    more</a>
                             </p>
                         </div>
                     </div>
@@ -210,13 +199,10 @@
                 <div class="item bg bg3">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1>One more for good measure.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget
-                                quam. Donec id elit non mi porta gravida at eget metus. Nullam
-                                id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <h1>360 Video</h1>
+                            <p>The VR Club is currently is collaboration with the Communication and Theater departments to create a full film for Virtual Reality. Contact Pauline for more details.</p>
                             <p>
-                                <a class="btn btn-lg btn-primary" href="#" role="button">Browse
-                                    gallery</a>
+                                <a class="btn btn-lg btn-primary" href="mailto:pwnyugen@ucsd.edu" role="button">Contact</a>
                             </p>
                         </div>
                     </div>
@@ -244,7 +230,7 @@
                 <center>
                 <div class="footer-social-icons">
                                 <ul class="social-icons">
-                                    <li><a href="" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="https://www.facebook.com/ucsdvr/?fref=ts" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
                                     <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
                                     <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
                                 </ul>
