--- a/about.html
+++ b/about.html
@@ -142,19 +142,7 @@
         </div>
 
     </nav>
-        <script src="js/jq-sticky-anything.min.js"></script>
-
-    <script type="text/javascript">
-
-    $('.secondnavbar').stickThis({
-        top:        0,      // top position of sticky element, measured from 'ceiling'
-        minscreenwidth: 0,      // element will not be sticky when viewport width smaller than this
-         maxscreenwidth: 999999,     // element will not be sticky when viewport width larger than this
-        zindex:     1,      // z-index value of sticky element
-        debugmode:  false   // when true, errors will be logged to console
-    });
-
-    </script>
+       
 
 
 
@@ -313,7 +301,7 @@
                 <center>
                 <div class="footer-social-icons">
                                 <ul class="social-icons">
-                                    <li><a href="" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="https://www.facebook.com/ucsdvr/?fref=ts" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
                                     <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
                                     <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
                                 </ul>
@@ -565,6 +553,7 @@
             margin: 0;
             background-color: #333;
             color: white;
+            z-index: 9000;
         }
           .navbar .navbar-nav {
                 display: inline-block;
@@ -693,6 +682,12 @@ ul.social-icons {
 
     <script src="js/scrolling-nav.js"></script>
 
+<script src="js/jquery.sticky.js"></script>
+<script>
+  $(document).ready(function(){
+    $('.secondnavbar').sticky({topSpacing:0 });
+  });
+</script>
 
 
     <!-- Bootstrap Core JavaScript -->
