Fixed Media Navbar and Updated Gallery Text

--- a/media.html
+++ b/media.html
@@ -106,14 +106,14 @@
      <nav class="secondnavbar flex ">
         <div class="flex-row ">
             <span class="flex-item ">
-                <i class="fa fa-money fa-2x" style="vertical-align: middle;">
+                <i class="fa fa-camera fa-2x" style="vertical-align: middle;">
                <a class="page-scroll" href="#Gallery" style="color:#d3d3d3;font-family:open sans;">Gallery</a>
                 </i>
             </span>
 
             <span class="flex-item">
 
-                <i class="fa fa-suitcase fa-2x" style="vertical-align: middle;">
+                <i class="fa fa-newspaper-o fa-2x" style="vertical-align: middle;">
                <a class="page-scroll" href="#FeederNinja_5153b0f96c17445fb9514868a8b500d9" style="color:#d3d3d3;font-family:open sans;">News</a>
                 </i>
 
@@ -164,12 +164,12 @@
     <h1>Gallery</h1>
    	</center>
    	<br><br>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 1" href="#"><img class="thumbnail img-responsive" src="img/Gallery/1.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="img/Gallery/2.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="img/Gallery/3.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 4" href="#"><img class="thumbnail img-responsive" src="img/Gallery/4.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 5" href="#"><img class="thumbnail img-responsive" src="img/Gallery/5.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 6" href="#"><img class="thumbnail img-responsive" src="img/Gallery/6.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="VR Club @ Winter GameFest!" href="#"><img class="thumbnail img-responsive" src="img/Gallery/1.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Connor teaching another Unity workshop" href="#"><img class="thumbnail img-responsive" src="img/Gallery/2.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Students testing out VR for the first time" href="#"><img class="thumbnail img-responsive" src="img/Gallery/3.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="HTC Vive demo at PC Ballroom East" href="#"><img class="thumbnail img-responsive" src="img/Gallery/4.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="VR Club president Sam with an HTC Vive Headset" href="#"><img class="thumbnail img-responsive" src="img/Gallery/5.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Samsung Gear VR" href="#"><img class="thumbnail img-responsive" src="img/Gallery/6.jpg"></a></div>
      <!-- <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 8" href="#"><img class="thumbnail img-responsive" src="img/Gallery/7.jpg"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 9" href="#"><img class="thumbnail img-responsive" src="img/Gallery/8.jpg"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 10" href="#"><img class="thumbnail img-responsive" src="img/Gallery/9.jpg"></a></div>
@@ -314,19 +314,9 @@ $('.thumbnail').click(function(){
     </div>
 
 
-	 <style type="text/css">
+<style type="text/css">
 
-	  .banner{
-            margin-top: -4em;
-            display: table;
-            width: 100%;
-            background-image: url('img/samsung-gear-vr.jpg');
-            background-size: cover;
-            height: 35em;
-            margin-bottom: 2em;
-        }
-
-	    footer{
+         footer{
             background-color: #337AB7;
             height: 5em;
             color: white;
@@ -334,119 +324,7 @@ $('.thumbnail').click(function(){
         }
 
 
-	 .media-title{
-	 	color:#34495E;
-
-	 }
-
-	 	.media-link{
-	 	color: black;
-
-	 	}
-
-		 *{
-		 	margin: 0;
-		 	padding: 0;
-		 }
-
-		 a:link {
-		 		 	color: black;
-
-    text-decoration: none;
-
-}
-
-a:visited {
-		 	color: black;
-
-    text-decoration: none;
-
-}
-
-a > .media-post:hover {
-	background-color: #eee;
-}
-	.modal-dialog {width:600px;}
-.thumbnail {margin-bottom:6px;}
-
-	 	body{
-	 		background: #fafafa;
-	 	}
-
-	 	.secondnavbar{
-            padding:0;
-            margin: 0em;
-            background-color: #333;
-            color: white;
-            z-index: 9000;
-        }
-
-	 	.banner{
-            margin-top: -4em;
-            display: table;
-            width: 100%;
-
-            background-size: cover;
-            height: 35em;
-      	     margin-bottom: 2em;
-	 	}
-
-
-
-	 	.media-column{
-	 		display: inline-block;
-	 	}
-
-	 	.hide-mobile{
-	 		display: inline-block;
-	 		background-color: #393E46;
-	 		height: 80vh;
-	 		width: 20em;
-	 		position: absolute;
-	 		margin-right: 6em;
-	 		right: 0px;
-	 		margin-bottom: 2em;
-	 		display: none;
-
-	 	}
-
-	 	.archive{
-	 		color: white;
-	 		padding: 2em;
-	 	}
-
-	 	.media-meta{
-	 		display: inline;
-	 	}
-	 	.media-post{
-	 		padding: 1em;
-	 		background: white;
-	 		border-radius: 0.3em;
-	 		width: 60em;
-	 		margin-bottom: 1em;
-	 		margin-left: 6em;
-	 	}
-
-	 	.media-op-img{
-	 		float: left;
-	 		margin-right: 1.2em;
-	 		border-radius: 50%;
-	 		height: 3em;
-	 		width: 3em;
-	 	}
-
-	 	.media-title{
-	 		font-size: 1.5em;
-
-	 	}
-
-	 	        .banner-box{
-            display: table-cell;
-            vertical-align: middle;
-            color: tomato;
-        }
-
-        .navbar .navbar-nav {
+         .navbar .navbar-nav {
                 display: inline-block;
                 float: none;
                 vertical-align: top;
@@ -507,14 +385,84 @@ a > .media-post:hover {
 
         }
 
-         .secondnavbar{
+        .navbar-nav{
+            display: table-cell;
+            text-align: center;
+        }
+
+        .navbar{
+            margin-top: 0 !important;
+            margin-bottom: 0;
+        }
+
+        .secondnavbar{
             padding: 0;
             margin: 0;
             background-color: #333;
             color: white;
+            z-index: 9000;
         }
 
-         @import url(http://fonts.googleapis.com/css?family=Lato);
+        body{
+            background: #fafafa;
+
+        }
+
+        .jobs{
+            padding: 2em;
+        }
+
+            .banner{
+            margin-top: 0em;
+            display: table;
+            width: 100%;
+            background-image: url('img/samsung-gear-vr.jpg');
+            background-size: cover;
+            height: 35em;
+            margin-bottom: 0em;
+        }
+
+
+        .publicisize{
+            padding: 2em;
+            background-color: #22313F;
+            color: white;
+            border-radius: 0.3em;
+            margin-bottom: 2em;
+        }
+
+        .job-posting{
+            text-align: left;
+            padding: 2em;
+            background-color: white;
+            margin-bottom: 2em;
+        }
+
+        .job-posting > img{
+            max-height: 3em;
+        }
+
+        .item > img{
+            max-height: 30em;
+        }
+
+        .banner-box{
+            display: table-cell;
+            vertical-align: middle;
+            color: tomato;
+        }
+
+        .page-desc{
+            padding: 2em;
+        }
+
+        .title
+        {
+            color: white;
+
+        }
+
+           @import url(http://fonts.googleapis.com/css?family=Lato);
 @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
 
@@ -606,7 +554,8 @@ ul.social-icons {
     background-color: #e64a41;
 }
 
-	 </style>
+    </style>
+	 
 
 	     <script src="js/scrolling-nav.js"></script>
 
