Fixed the Nav bars and the font with them

--- a/about.html
+++ b/about.html
@@ -111,8 +111,8 @@
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
              <span class="flex-item">
-                <i class="fa fa-users fa-2x">
-                <a class="page-scroll" href="#whatisVR"style = "font-size: 90%;color:white;"> What is VR?
+                <i class="fa fa-users" style="vertical-align: middle;">
+                <a class="page-scroll" href="#whatisVR"style = "font-size:120%;color:#d3d3d3;"> What is VR?
                     </i>
 
                 </a>
@@ -121,8 +121,8 @@
 
             <span class="flex-item ">
 
-                <i class="fa fa-key fa-2x" style="vertical-align: middle;">
-                     <a class="page-scroll" href="#Mission" style = "font-size: 90%; color:white; ">Mission</a>
+                <i class="fa fa-key" style="vertical-align: middle;">
+                     <a class="page-scroll" href="#Mission" style = "font-size:120%; color:#d3d3d3; ">Mission</a>
 
                 </i>
 
@@ -130,8 +130,8 @@
             </span>
 
             <span class="flex-item">
-                <i class="fa fa-users fa-2x">
-                <a class="page-scroll" href="#honeycombs"style = "font-size: 90%;color:white;"> Meet the Team
+                <i class="fa fa-users" style="vertical-align: middle;">
+                <a class="page-scroll" href="#honeycombs"style = "font-size: 120%;color:#d3d3d3;"> Meet the Team
                     </i>
 
                 </a>
@@ -529,7 +529,7 @@
         }
 
         .flex-item{
-            margin-top: 1em;
+            margin-top: 0em;
             padding: 1em;
             width: 100%;
             text-align: center;
