--- a/contact.html
+++ b/contact.html
@@ -81,8 +81,8 @@
         <div class="flex-row ">
             <span class="flex-item ">
 
- <i class="fa fa-map-o fa-2x" style="vertical-align: middle;">
-               <a class="page-scroll" href="#location" style="color:#d3d3d3;font-family:open sans;">Location</a>
+ <i class="fa fa-map-o " style="vertical-align: middle;">
+               <a class="page-scroll" href="#location" style="color:#d3d3d3;font-size: 120%;">Location</a>
                 </i>
 
             </span>
@@ -90,15 +90,15 @@
             <span class="flex-item">
 
 
-            <i class="fa fa-user-plus fa-2x" style="vertical-align: middle;">
-            <a class="page-scroll" href="#getInvolved" style="color:#d3d3d3;font-family:open sans;">Get Involved </a>
+            <i class="fa fa-user-plus " style="vertical-align: middle; ">
+            <a class="page-scroll" href="#getInvolved" style="color:#d3d3d3;font-size: 120%;">Get Involved </a>
             </i>
             </span>
 
             <span class="flex-item">
 
-                <i class="fa fa-envelope-o fa-2x" style="vertical-align: middle;">
-           <a class="page-scroll" href="#contact" style="color:#d3d3d3;font-family:open sans;">Contact Us </a>
+                <i class="fa fa-envelope-o" style="vertical-align: middle;">
+           <a class="page-scroll" href="#contact" style="color:#d3d3d3;font-size: 120%;">Contact Us </a>
             </i>
 
             </span>
@@ -397,7 +397,7 @@
         }
 
         .flex-item{
-            margin-top: 1em;
+            margin-top: 0em;
             padding: 1em;
             width: 100%;
             text-align: center;
