--- a/media.html
+++ b/media.html
@@ -106,15 +106,15 @@
      <nav class="secondnavbar flex ">
         <div class="flex-row ">
             <span class="flex-item ">
-                <i class="fa fa-camera fa-2x" style="vertical-align: middle;">
-               <a class="page-scroll" href="#Gallery" style="color:#d3d3d3;font-family:open sans;">Gallery</a>
+                <i class="fa fa-camera fa-2x" style="vertical-align: middle; font-size:120%;">
+               <a class="page-scroll" href="#Gallery" style="color:#d3d3d3;">Gallery</a>
                 </i>
             </span>
 
             <span class="flex-item">
 
-                <i class="fa fa-newspaper-o fa-2x" style="vertical-align: middle;">
-               <a class="page-scroll" href="#FeederNinja_5153b0f96c17445fb9514868a8b500d9" style="color:#d3d3d3;font-family:open sans;">News</a>
+                <i class="fa fa-newspaper-o fa-2x" style="vertical-align: middle; font-size: 120%">
+               <a class="page-scroll" href="#FeederNinja_5153b0f96c17445fb9514868a8b500d9" style="color:#d3d3d3;">News</a>
                 </i>
 
             </span>
@@ -376,7 +376,7 @@ $('.thumbnail').click(function(){
         }
 
         .flex-item{
-            margin-top: 1em;
+            margin-top: 0em;
             padding: 1em;
             width: 100%;
             text-align: center;
