--- a/opportunities.html
+++ b/opportunities.html
@@ -107,15 +107,15 @@
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
             <span class="flex-item ">
-                <i class="fa fa-money fa-2x" style="vertical-align: middle;">
-               <a class="page-scroll" href="#internships" style="color:#d3d3d3;font-family:open sans;">Featured</a>
+                <i class="fa fa-money" style="vertical-align: middle;">
+               <a class="page-scroll" href="#internships" style="color:#d3d3d3;font-size: 120%;">Featured</a>
                 </i>
             </span>
 
             <span class="flex-item">
 
-                <i class="fa fa-suitcase fa-2x" style="vertical-align: middle;">
-               <a class="page-scroll" href="#jobs" style="color:#d3d3d3;font-family:open sans;">Current</a>
+                <i class="fa fa-suitcase" style="vertical-align: middle;font-size: 120%;">
+               <a class="page-scroll" href="#jobs" style="color:#d3d3d3;">Current</a>
                 </i>
 
             </span>
@@ -444,7 +444,7 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
         }
 
         .flex-item{
-            margin-top: 1em;
+            margin-top: 0em;
             padding: 1em;
             width: 100%;
             text-align: center;
